Fixed issues in banner
- flxed overflowing issue on a certain window size(1070px)
- fixed overlapping issue where link gets hidden on small desktop window sizes

--- a/frontend/src/components/banner/Banner.module.scss
+++ b/frontend/src/components/banner/Banner.module.scss
@@ -4,6 +4,7 @@
     background: $color-primary-black;
     color: $color-primary-white;
     height: 75vh;
+    overflow: hidden;
     @include flex(flex-end, center);
 
     @include mq(large) {
@@ -47,8 +48,7 @@
         text-decoration: none;
 
         @include mq(large) {
-            margin-block: 3.3rem 10.25rem;
-            margin-block: 7.51rem;
+            margin-block: 17% 27%;
         }
 
         svg {
